--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <head>
-<link rel="stylesheet" href="quiz.css">
+<link rel="stylesheet" href="./assets/css/style.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -58,9 +58,7 @@
     </div>
 
 
-
-    <script src="quizscript.js"></script>
-    <script src="quiz.js"></script>
+    <script src="./assets/js/script.js"></script>
 
 </body>
 </html>
