--- a/index.html
+++ b/index.html
@@ -1,64 +1,28 @@
-<!DOCTYPE html> 
-
+<!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
 <head>
-<link rel="stylesheet" href="./assets/css/style.css">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Code Quiz</title>
+ </head>
 
-<body>
-    <div class="start_btn"><button>Start Quiz</button></div>
-    <div class="info_box">
-        <div class="info-title"><span>Rules</span></div>
-        <div class="info-list">
-            <div class="info">1. Once you select your answer, it can't be undone.</div>
-            <div class="info">2. You can't select any option once time goes off.</div>
-            <div class="info">3. You can't exit from the Quiz while you're playing.</div>
-        </div> 
-        <div class="buttons">
-            <button class="quit">Exit Quiz</button>
-            <button class="restart">Continue</button>
-        </div>
+ <body>
+<header>
+         <div id="currentTime"></div>
+     </header>
+     <div id="wrapper">
+         <div id="questionsDiv">
+             <h1>Coding Quiz Challenge</h1>
+             <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect
+                 answers
+                 will penalize your score/time by ten seconds!</p>
+                 answers will penalize your score/time by ten seconds!</p>
+             <ul id="choicesUl"></ul>
+             <button id="startTime">Start Quiz</button>
+         </div>
     </div>
-
-    <div class="quiz_box">
-        <header>
-            <div class="title">Awesome Quiz Application</div>
-            <div class="timer">
-                <div class="time_left_txt">Time Left</div>
-                <div class="timer_sec">15</div>
-            </div>
-            <div class="time_line"></div>
-        </header>
-        <section>
-            <div class="que_text">
-            </div>
-            <div class="option_list">
-            </div>
-        </section>
-        <footer>
-            <div class="total_que">
-            </div>
-            <button class="next_btn">Next </button>
-        </footer>
-    </div>
-    <div class="result_box">
-        <div class="icon">
-            <i class="fas fa-crown"></i>
-        </div>
-        <div class="complete_text">All done!</div>
-        <div class="score_text">
-        </div>
-        <div class="buttons">
-            <button class="restart">Again</button>
-            <button class="quit">Quit</button>
-        </div>
-    </div>
-
-
-    <script src="./assets/js/script.js"></script>
-
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
